--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@fortawesome/fontawesome-free": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^6.1.0",
     "@rollup/plugin-replace": "^2.2.0",
     "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
@@ -33,6 +33,6 @@
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
-    "svelte-preprocess": "^3.3.0"
+    "svelte-preprocess": "^3.3.0",
   }
 }
