--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "^0.27.0",
     "svelte": "^3.0.0",
-    "svelte-preprocess": "^3.3.0",
+    "svelte-preprocess": "^3.3.0"
   }
 }
