--- a/package.json
+++ b/package.json
@@ -1,39 +1,26 @@
 {
   "name": "bruno-dabelstein-gmbh",
-  "version": "0.0.1",
+  "type": "module",
+  "private": "true",
   "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export",
-    "start": "node __sapper__/build"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "start": "svelte-kit start"
   },
   "dependencies": {
-    "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^0.4.0",
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^6.1.0",
-    "@rollup/plugin-replace": "^2.2.0",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@sveltejs/adapter-static": "^1.0.0-next.4",
+    "@sveltejs/kit": "^1.0.0-next.61",
     "bootstrap": "^4.4.1",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
     "prettier-plugin-svelte": "^0.7.0",
-    "rollup": "^1.20.0",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "sapper": "^0.27.11",
-    "svelte": "^3.0.0",
-    "svelte-preprocess": "^3.3.0"
+    "svelte": "^3.35.0",
+    "svelte-preprocess": "^3.3.0",
+    "vite": "^2.1.3"
   }
 }
